rework to use oc patch as default command but can still use template to replace files

--- a/templates/oauthclient-browser-client.yml.j2
+++ b/templates/oauthclient-browser-client.yml.j2
@@ -5,5 +5,5 @@ metadata:
   name: openshift-browser-client
 redirectURIs:
 - https://{{ ocp_oauth_server_url }}/oauth/token/display
-secret: {{ browser_client_secret }} 
+secret: {{ client_secret }} 
 accessTokenInactivityTimeoutSeconds: {{ client_inactivity_timeout_seconds }}
