--- a/templates/oauthclient-console-client.yml.j2
+++ b/templates/oauthclient-console-client.yml.j2
@@ -7,5 +7,5 @@ metadata:
   name: console
 redirectURIs:
 - https://{{ console_url }}/auth/callback
-secret: {{ console_client_secret }}
+secret: {{ client_secret }}
 accessTokenInactivityTimeoutSeconds: {{ client_inactivity_timeout_seconds }}
